minor fixups