@@ -1,28 +1,55 @@
 #!/bin/bash -x
 SCRIPT_DIR=$(readlink -f `dirname $0`)
+
 BASE=$(readlink -f `dirname $0`/..)
+
 if [ -f src/main/resources/logging.properties ] ; then 
 LOGGING='-Djava.util.logging.config.file=src/main/resources/logging.properties'
 fi
 
 if [ -d target ] ; then 
 
-CLASSPATH=$BASE/target/jslee-js-1.0.Final.jar:$BASE/target/jmxjs-1.0.Final-shaded.jar:$BASE/target/dependency/runtime/*:$BASE/target/dependency/compile/*
 
-CLASSPATH=$BASE/src/main/js:$BASE/src/test/js:$BASE/target/classes/:$BASE/target/test-classes/:$CLASSPATH:$BASE/src/main/resources:
+CLASSPATH=
+CLASSPATH+=:$BASE/src/main/js:$BASE/src/test/js:$BASE/target/classes/:$BASE/target/test-classes/:$BASE/src/main/resources
+CLASSPATH+=":$BASE/target/jslee-js-1.0.Final.jar:$BASE/target/dependency/runtime/*:$BASE/target/dependency/compile/*:$BASE/target/dependency/provided/*"
+
+
 else 
 
-CLASSPATH=$BASE/jmxjs-1.0.Final-shaded.jar:$CLASSPATH
+CLASSPATH=$BASE/jslee-js-1.0.Final-shaded.jar:$CLASSPATH
 CLASSPATH=$CLASSPATH:/media/work/.m2/repository/mobi/mofokom/jslee-js/1.0.Final/jslee-js-1.0.Final-shade.jar
+
 fi 
 
-WILDFLY_HOME=/media/work/inst/telscale-slee-7.2.0-5.13-wildfly-10.1.0.Final/wildfly-10.1.0.Final
- CLASSPATH=$CLASSPATH:${WILDFLY_HOME}/modules/system/layers/base/org/mobicents/ss7/modules/main/*:${WILDFLY_HOME}/modules/system/layers/base/org/mobicents/ss7/commons/main/*:${WILDFLY_HOME}/modules/system/layers/base/org/restcomm/diameter/lib/main/:${WILDFLY_HOME}/modules/system/layers/base/org/restcomm/smpp/bootstrap/main/*
+if [ -z "$JBOSS_HOME" ] ; then 
+JBOSS_HOME=/media/work/inst/telscale-slee-7.2.0-5.13-wildfly-10.1.0.Final/wildfly-10.1.0.Final
+fi 
+
+CLASSPATH+=:${JBOSS_HOME}/modules/system/layers/base/org/mobicents/ss7/modules/main/*:${JBOSS_HOME}/modules/system/layers/base/org/mobicents/ss7/commons/main/*:${JBOSS_HOME}/modules/system/layers/base/org/restcomm/diameter/lib/main/:${JBOSS_HOME}/modules/system/layers/base/org/restcomm/smpp/bootstrap/main/*
+
+echo ========= $CLASSPATH ==============
 
 #JAVA_OPTS="-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=8000"
-JAVA_OPTS="-Djava.security.manager -Djava.security.policy=$SCRIPT_DIR/java.policy"
+JAVA_OPTS="--add-opens=jdk.internal.vm.ci/jdk.vm.ci.services=ALL-UNNAMED \
+--add-opens=jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED 
+--add-opens=jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED 
+--add-opens=jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED 
+--add-opens=jdk.internal.vm.ci/jdk.vm.ci.code.stack=ALL-UNNAMED 
+--add-opens=jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED 
+--add-opens=jdk.internal.vm.ci/jdk.vm.ci.common=ALL-UNNAMED 
+--add-opens=jdk.internal.vm.compiler/org.graalvm.compiler.core.target=ALL-UNNAMED 
+--add-opens=jdk.internal.vm.compiler/org.graalvm.compiler.core.common=ALL-UNNAMED 
+--add-opens=jdk.internal.vm.compiler/org.graalvm.compiler.hotspot=ALL-UNNAMED 
+-Dgraal.CompilationFailureAction=Silent -XX:+UnlockExperimentalVMOptions -XX:+UseJVMCICompiler -Djava.security.manager -Djava.security.policy=$SCRIPT_DIR/java.policy"
 let native=0 
-java $LOGGING $JAVA_OPTS -classpath $CLASSPATH run.RunScript $@
+
+JAVA=java
+if [ -n "$JAVA_HOME" ] ; then
+  JAVA=${JAVA_HOME}/bin/java
+fi
+
+$JAVA $LOGGING $JAVA_OPTS -classpath $CLASSPATH run.RunScript $@
 
 exit
 
